Attaching an image to many color attachment points is unsupported

See Section 5.34 Framebuffer color attachments in WebGL 2.0 spec.

BUG=628861
TEST=gpu_unittests conformance2/rendering/framebuffer-unsupported.html
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2159183002
Cr-Commit-Position: refs/heads/master@{#406613}

Former-commit-id: db975cd18716681f50db94d36120ba50148604fe